--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "jsonwebtoken": "9.0.0",
     "mongoose": "7.1.0",
     "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.0",
     "validator": "13.9.0"
   },
   "devDependencies": {
