--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
+    "axios": "^1.8.4",
     "bootstrap": "5.2.3",
+    "framer-motion": "^12.6.3",
     "moment": "2.29.4",
     "react": "^18.2.0",
     "react-datetime-picker": "5.0.3",
