--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb://localhost:27017/CarServiceBooking
 SECRET_KEY=secretkey
+EMAIL=tcfproject212@gmail.com
+PASSWORD=yupv idzv hebn xxhy
