--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.4",
     "bootstrap": "5.2.3",
     "framer-motion": "^12.6.3",
+    "jspdf": "^3.0.1",
     "moment": "2.29.4",
     "react": "^18.2.0",
     "react-datetime-picker": "5.0.3",
@@ -28,7 +29,8 @@
     "react-tooltip": "5.21.3",
     "redux": "4.2.1",
     "uuid": "9.0.0",
-    "web-vitals": "2.1.4"
+    "web-vitals": "2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
