--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "4.18.2",
     "helmet": "7.0.0",
     "jsonwebtoken": "9.0.0",
+    "moment": "^2.30.1",
     "mongoose": "7.1.0",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.2",
