--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.8.0",
     "bcrypt": "5.1.0",
     "body-parser": "1.20.2",
     "concurrently": "8.0.1",
     "cors": "2.8.5",
     "dotenv": "16.0.3",
     "express": "4.18.2",
+    "faker": "^5.5.3",
     "helmet": "7.0.0",
     "jsonwebtoken": "9.0.0",
     "moment": "^2.30.1",
